--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
         <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">어서오세요</h1>
-            <p class="col-md-8 fs-4"> 테스트용 화면입니다. </p>
+            <p class="col-md-8 fs-4"> 테스트용 화면입니다.. </p>
         </div>
     </div>
 
